变量作用域

--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LearnEs6</title>
     <script src="./js/index.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-
+    <div id="hr"></div>
+    <div class="top">
+        <div class="top-list">
+            <div class="top-logo">LOGO</div>
+            <div class="top-bar">
+                <ul>
+                    <li><a href="">首页</a></li>
+                    <li><a href="">demo3</a></li>
+                    <li><a href="">demo1</a></li>
+                    <li><a href="">demo2</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
