--- a/index.html
+++ b/index.html
@@ -5,23 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LearnEs6</title>
-    <script src="./js/index.js" charset="utf-8"></script>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <div id="hr"></div>
-    <div class="top">
-        <div class="top-list">
-            <div class="top-logo">LOGO</div>
-            <div class="top-bar">
-                <ul>
-                    <li><a href="">首页</a></li>
-                    <li><a href="">demo3</a></li>
-                    <li><a href="">demo1</a></li>
-                    <li><a href="">demo2</a></li>
-                </ul>
+    <div id="box">
+        <div class="box-list">
+            <div id="clearfix">
+                <div class="box-list-icon"><h2>一月</h2></div>
+                <div class="box-list-icon"><h2>二月</h2></div>
+                <div class="box-list-icon"><h2>三月</h2></div>
+                <div class="box-list-icon"><h2>四月</h2></div>
+                <div class="box-list-icon"><h2>五月</h2></div>
+                <div class="box-list-icon"><h2>六月</h2></div>
+                <div class="box-list-icon"><h2>七月</h2></div>
+                <div class="box-list-icon"><h2>八月</h2></div>
+                <div class="box-list-icon"><h2>九月</h2></div>
+                <div class="box-list-icon"><h2>十月</h2></div>
+                <div class="box-list-icon"><h2>十一月</h2></div>
+                <div class="box-list-icon"><h2>十二月</h2></div>
+            </div>
+            <div class="text-box">
+                        <p class="text-content">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus cum, sunt, et quia nostrum assumenda minima voluptates labore officiis optio doloremque molestias vel voluptatibus tenetur exercitationem. Laboriosam, similique. Illum, iure.
+                        </p>  
             </div>
         </div>
     </div>
+<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
