--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
                     <h3>十二月</h3>
                 </div>
             </div>
-            <div id="text-box">
-                <p class="text-content">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus cum, sunt, et quia nostrum assumenda minima voluptates
-                    labore officiis optio doloremque molestias vel voluptatibus tenetur exercitationem. Laboriosam, similique.
-                    Illum, iure.
-                </p>
-            </div>          
+            <div id="content-box">
+                <div class="text-box">
+                    <p class="text-content">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus cum, sunt, et quia nostrum assumenda minima voluptates
+                        labore officiis optio doloremque molestias vel voluptatibus tenetur exercitationem. Laboriosam, similique.
+                        Illum, iure.
+                    </p>
+                </div>    
+            </div>      
         </div>
     </div>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="./js/index.js"></script>
     <script>
-        $(document).ready(function () {
-            var btr = $('.box-list-icon h3')
-            var textBox = $('#text-box')            
-            btr.click(function () {
-                textBox.slideToggle('slow')
+        $(function(){
+            $('.box-list-icon').click(function(){
+                $('.text-box').slideToggle('slow')
             })
         });
     </script>
