--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div id="footer">
                     <div class="foot-content">
-
+                        <h2>this is tinkpad xiugai de leirong</h2>
                     </div>
                 </div>
             </div>
