--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                                 <li>
                                     <a href="">放弃啊！</a>
                                 </li>
+                                <li id="btn">
+                                    <a href="javascript:;">查看更多</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -94,7 +97,7 @@
                             <template>
                                 <el-carousel :interval="5000" arrow="always" type="card">
                                     <el-carousel-item v-for="item in 5" :key="item">
-                                        <h3>{{ item }}</h3>
+                                        <h3></h3>
                                     </el-carousel-item>
                                 </el-carousel>
                             </template>
@@ -102,19 +105,42 @@
                     </div>
                 </div>
             </div>
+
+
+            <div class="rightBar" id="btr-text">
+                <ul>
+                    <h2>百家争鸣</h2>
+                    <li>道家</li>
+                    <li>儒家</li>
+                    <li>墨家</li>
+                    <li>农家</li>
+                </ul>
+                <div class="copy"><h2>&copy; zhenghui POWER BY 小霸王服务器</h2></div>
+            </div>
         </div>
+
+
     </div>
-    <!-- <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.8.0/jquery.min.js"></script> -->
+    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-
     <script src="./js/index.js"></script>
     <script>
-
-                     
         new Vue().$mount('#app')
-        
-
+        $(function () {
+            var btr = $('#btn')
+            var btrTxt = $('#btr-text')
+            btr.click(function () {
+                btrTxt.animate({
+                    right: '0px'
+                })
+            })
+            btrTxt.mouseleave(function () {
+                btrTxt.animate({
+                    right: '-200'
+                })
+            })
+        })
     </script>
 </body>
 
