--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LearnEs6</title>
+    <link rel="shortcut icon" href="./images/icon_TV.png">
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <!-- element-ui饿了么 -->
     <link rel="stylesheet" href="./css/main.css">
@@ -114,8 +115,13 @@
                     <li>儒家</li>
                     <li>墨家</li>
                     <li>农家</li>
+                    <li>法家</li>
+                    <li>纵横家</li>
+                    <li>兵家</li>
+                    <li>阴阳家</li>
+                    <li>杂家</li>
                 </ul>
-                <div class="copy"><h2>&copy; zhenghui POWER BY 小霸王服务器</h2></div>
+                <div class="copy"><h4>&copy; zhenghui POWER BY 小霸王服务器</h4></div>
             </div>
         </div>
 
